objects/Talent_Central__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Account_Transition_progress__c</fullName>
        <label>Overall Account Transition Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No transition possible</fullName>
                </value>
                <value>
                    <fullName>No systems or orders yet transitioned</fullName>
                </value>
                <value>
                    <fullName>Partially Transitioned</fullName>
                </value>
                <value>
                    <fullName>Fully Transitioned</fullName>
                </value>
                <value>
                    <fullName>Fully Transitioned – Legacy System Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Legacy System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Migration_Email_sent_to_Commercial__c</fullName>
        <label>Post Migration Email sent to Commercial?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_migration_reminder_email_rolled_out__c</fullName>
        <label>Pre-migration reminder email rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projects_Created_if_needed__c</fullName>
        <label>Projects Created (if needed)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Deferral__c</fullName>
        <label>Reason for Deferral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Issues</fullName>
                </value>
                <value>
                    <fullName>Client Pushback</fullName>
                </value>
                <value>
                    <fullName>Commercial Pushback</fullName>
                </value>
                <value>
                    <fullName>COO Pushback</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Replacement__c</fullName>
        <label>Report Replacement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_transition_Date__c</fullName>
        <inlineHelpText>HIGH TOUCH: Select the transition date you provisionally agree with the client - note that transition dates will only be confirmed on receipt of a signed confirmation letter</inlineHelpText>
        <label>Requested Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHL_Proposed_transition_Date__c</fullName>
        <label>SHL Proposed Transition Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10/09/2014</fullName>
                </value>
                <value>
                    <fullName>17/09/2014</fullName>
                </value>
                <value>
                    <fullName>24/09/2014</fullName>
                </value>
                <value>
                    <fullName>08/10/2014</fullName>
                </value>
                <value>
                    <fullName>15/10/2014</fullName>
                </value>
                <value>
                    <fullName>12/11/2014</fullName>
                </value>
                <value>
                    <fullName>19/11/2014</fullName>
                </value>
                <value>
                    <fullName>10/12/2014</fullName>
                </value>
                <value>
                    <fullName>17/12/2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Company_Projects_Candidates__c</fullName>
        <label>Scope - Company/Projects/Candidates?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Settings</fullName>
                </value>
                <value>
                    <fullName>Projects Settings</fullName>
                </value>
                <value>
                    <fullName>Candidate Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Upgrade_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Upgrade Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TalentCentral_Transition2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Upgrade_Progress__c</fullName>
        <label>Site Upgrade Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet upgraded</fullName>
                </value>
                <value>
                    <fullName>Fully upgraded</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slot_Description__c</fullName>
        <label>Slot Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specify_if_any_other_language__c</fullName>
        <label>Specify, if any other language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit_CheckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_System_ID__c</fullName>
        <label>TC+ System ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Transition_Slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TC Transition Slot</label>
        <referenceTo>TC_Transition_Slot__c</referenceTo>
        <relationshipName>TalentCentral_Transition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TalentCentral_Transition_Description__c</fullName>
        <inlineHelpText>Describes the commercial arrangement type that is due to be migrated in this transition activity</inlineHelpText>
        <label>TalentCentral Transition Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Quarter__c</fullName>
        <label>Target Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Q1 2020</fullName>
                </value>
                <value>
                    <fullName>Q2 2020</fullName>
                </value>
                <value>
                    <fullName>Q3 2020</fullName>
                </value>
                <value>
                    <fullName>Q4 2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Upgrade_Date__c</fullName>
        <label>Target Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_D_Revenue_L12M_USD__c</fullName>
        <label>Total D# Revenue L12M (USD$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Authorisation_Type__c</fullName>
        <label>Transition Authorisation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Touch - No Confirmation Letter Required</fullName>
                </value>
                <value>
                    <fullName>High Touch - Confirmation Letter Required</fullName>
                </value>
                <value>
                    <fullName>High Touch - Pre-authorisation clause in current order</fullName>
                </value>
                <value>
                    <fullName>Integrated Transition - SOW Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Booking_Status__c</fullName>
        <label>Transition Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                    <default>true</default>
                    <label>Provisional</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Suggested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transition Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TalentCentral_Transition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transition_Engagement_Type__c</fullName>
        <label>Transition Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Touch</fullName>
                </value>
                <value>
                    <fullName>High Touch - Standard Av</fullName>
                </value>
                <value>
                    <fullName>High Touch - Standard High</fullName>
                </value>
                <value>
                    <fullName>High Touch - Complex</fullName>
                </value>
                <value>
                    <fullName>Integrated Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Jobs_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only used when pre-agreed that the customer&apos;s active Job / Project configurations will be migrated</inlineHelpText>
        <label>Transition Jobs/Projects?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Slot_Date__c</fullName>
        <formula>TC_Transition_Slot__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transition Slot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Slot_Type__c</fullName>
        <formula>text(TC_Transition_Slot__r.Transition_Slot_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transition Slot Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Wave__c</fullName>
        <label>Transition Wave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT_Completed__c</fullName>
        <label>UAT Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Revalidation required(open issues)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Initiated__c</fullName>
        <label>UAT Initiated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Status__c</fullName>
        <label>UAT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Revalidation Required</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
                <value>
                    <fullName>Migration Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_conversion_rate__c</fullName>
        <label>Unit Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_Authorization_type__c</fullName>
        <label>Upgrade Authorization type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Touch Customers</fullName>
                </value>
                <value>
                    <fullName>Mid Touch Customers</fullName>
                </value>
                <value>
                    <fullName>High Touch Customers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Classification__c</fullName>
        <label>Upgrade Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>Standalone Tailored</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>SODA MS</fullName>
                </value>
                <value>
                    <fullName>Legacy Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Dependency__c</fullName>
        <label>Upgrade Dependency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone PJM</fullName>
                </value>
                <value>
                    <fullName>Extranet</fullName>
                </value>
                <value>
                    <fullName>Interoperability</fullName>
                </value>
                <value>
                    <fullName>Integrated PJM</fullName>
                </value>
                <value>
                    <fullName>Timer Extension</fullName>
                </value>
                <value>
                    <fullName>ATS Onboarding</fullName>
                </value>
                <value>
                    <fullName>Proctor</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>2 Sitting</fullName>
                </value>
                <value>
                    <fullName>Custom App Form</fullName>
                </value>
                <value>
                    <fullName>Hurdling</fullName>
                </value>
                <value>
                    <fullName>Copy Across Sittings</fullName>
                </value>
                <value>
                    <fullName>Text Field Responses</fullName>
                </value>
                <value>
                    <fullName>RR Across Platforms</fullName>
                </value>
                <value>
                    <fullName>Data Privacy</fullName>
                </value>
                <value>
                    <fullName>Multiple Colored Scorebands in a Solution</fullName>
                </value>
                <value>
                    <fullName>CCSimsFinancial</fullName>
                </value>
                <value>
                    <fullName>CCSims CFR</fullName>
                </value>
                <value>
                    <fullName>MQ Korean</fullName>
                </value>
                <value>
                    <fullName>Mobile COTM</fullName>
                </value>
                <value>
                    <fullName>Bilingual CCSims</fullName>
                </value>
                <value>
                    <fullName>Skills Testing</fullName>
                </value>
                <value>
                    <fullName>Math Basics</fullName>
                </value>
                <value>
                    <fullName>Sales Challenger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TC Upgrade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>Email_1_Warmup_mail_rolled_out__c</columns>
        <columns>Email_2_Pre_migration_Email_rolled_out__c</columns>
        <columns>Email_5_Post_migration_Email_rolled_out__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades1</fullName>
        <columns>Cohort__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Actual_Upgrade_Date__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Initiated__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <columns>Email_1_Warmup_mail_rolled_out__c</columns>
        <columns>Email_2_Pre_migration_Email_rolled_out__c</columns>
        <columns>Identified_Issue_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>CSIT TC+ Upgrades</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades_Actioned_Trained</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>TC_System_ID__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Did_the_client_attend_the_session__c</columns>
        <columns>Date_of_enablement_session__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Status__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <columns>Norm_Replacement__c</columns>
        <columns>Report_Replacement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Upgrade_Progress__c</field>
            <operation>equals</operation>
            <value>Fully upgraded</value>
        </filters>
        <label>CSIT TC+ Upgrades Actioned/Enabled</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades_enabled</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>TC_System_ID__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Did_the_client_attend_the_session__c</columns>
        <columns>Date_of_enablement_session__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Status__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <columns>Norm_Replacement__c</columns>
        <columns>Report_Replacement__c</columns>
        <filterScope>Everything</filterScope>
        <label>CSIT TC+ Upgrades Enablement status</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades_not_Fully_Upgraded</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>TC_System_ID__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Did_the_client_attend_the_session__c</columns>
        <columns>Date_of_enablement_session__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Status__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <columns>Norm_Replacement__c</columns>
        <columns>Report_Replacement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Upgrade_Progress__c</field>
            <operation>notEqual</operation>
            <value>Fully upgraded</value>
        </filters>
        <label>CSIT TC+ Upgrades not Fully Upgraded</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades_pilot</fullName>
        <columns>Cohort__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>TC_System_ID__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Did_the_client_attend_the_session__c</columns>
        <columns>Date_of_enablement_session__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Status__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>equals</operation>
            <value>Pilot</value>
        </filters>
        <label>CSIT TC+ Upgrades pilot</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSIT_TC_Upgrades_target_date_020924</fullName>
        <columns>Cohort__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phase__c</columns>
        <columns>TC_System_ID__c</columns>
        <columns>Target_Upgrade_Date__c</columns>
        <columns>Did_the_client_attend_the_session__c</columns>
        <columns>Date_of_enablement_session__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Language__c</columns>
        <columns>Site_Upgrade_Progress__c</columns>
        <columns>UAT_Status__c</columns>
        <columns>Orders_created__c</columns>
        <columns>UAT_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>equals</operation>
            <value>Cohort 1</value>
        </filters>
        <label>CSIT TC+ Upgrades cohort 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSIT_Case_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TCU-{0000}</displayFormat>
        <label>TC Upgrade Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Upgrade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_choose_slot_date_within_four_weeks</fullName>
        <active>false</active>
        <description>User cannot book this slot as the Transition Slot Date is within four weeks of the current date</description>
        <errorConditionFormula>AND(NOT(OR( $Permission.Access_to_urgent_TC_slots ,$Profile.Name = &apos;CT&apos;,$Profile.Name = &apos;NEW Training User&apos;,$Profile.Name = &apos;System Administrator UK Client Helpdesk&apos;,$Profile.Name = &apos;System Administrator&apos;)),OR(Text(TC_Transition_Slot__r.Transition_Slot_Type__c)=&apos;Complex&apos;,Text(TC_Transition_Slot__r.Transition_Slot_Type__c) =&apos;Integrated&apos;),TC_Transition_Slot__r.Date__c - TODAY() &lt;= 28,OR(ISNEW(),ISCHANGED(TC_Transition_Slot__c)))</errorConditionFormula>
        <errorMessage>User cannot book this slot as the Transition Slot Date is within four weeks of the current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_choose_slot_date_within_two_weeks</fullName>
        <active>false</active>
        <description>User cannot book this slot as the Transition Slot Date is within two weeks of the current date</description>
        <errorConditionFormula>AND(NOT(OR( $Permission.Access_to_urgent_TC_slots ,$Profile.Name = &apos;CT&apos;,$Profile.Name = &apos;NEW Training User&apos;,$Profile.Name = &apos;System Administrator UK Client Helpdesk&apos;,$Profile.Name = &apos;System Administrator&apos;)),
OR(Text(TC_Transition_Slot__r.Transition_Slot_Type__c) =&apos;Low Touch&apos;,Text(TC_Transition_Slot__r.Transition_Slot_Type__c) =&apos;Standalone&apos;),TC_Transition_Slot__r.Date__c - TODAY()  &lt;=  14,OR(ISNEW(),ISCHANGED(TC_Transition_Slot__c)))</errorConditionFormula>
        <errorMessage>User cannot book this slot as the Transition Slot Date is within two weeks of the current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Defferal_Reason_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Current_Transition_Activity__c , &apos;Do Not Transition - Deferred&apos;), ISPICKVAL( Deferral_reason__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Deferral_reason__c</errorDisplayField>
        <errorMessage>Please provide a deferral reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Reason_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Current_Transition_Activity__c , &apos;Selected for Transition – On Hold&apos;), ISPICKVAL( On_Hold_Reason__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
        <errorMessage>Please provide on hold reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrictions_on_TC_booking_status</fullName>
        <active>false</active>
        <description>Only the CT, New Training User and System Administrator UK Client Helpdesk profile have permissions to choose a booking status value as Confirmed, On Hold and Cancelled</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name = &apos;GCSC General&apos;,$Profile.Name = &apos;Commercial&apos;,$Profile.Name = &apos;NEW Training User&apos;,
$Profile.Name = &apos;System Administrator UK Client Helpdesk&apos;,$Profile.Name = &apos;System Administrator&apos;)),
OR(ISPICKVAL( Transition_Booking_Status__c,&quot;Confirmed&quot;), ISPICKVAL( Transition_Booking_Status__c,&quot;Cancelled&quot;),
ISPICKVAL( Transition_Booking_Status__c,&quot;On Hold&quot;),ISPICKVAL( Transition_Booking_Status__c,&quot;Suggested&quot;)),OR(ISNEW(),ISCHANGED(Transition_Booking_Status__c)))</errorConditionFormula>
        <errorDisplayField>Transition_Booking_Status__c</errorDisplayField>
        <errorMessage>Only the TalentCentral teams are able to confirm, cancel, suggested or move a booking to on hold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrictions_on_TC_slot</fullName>
        <active>false</active>
        <description>Only the TalentCentral teams are able to choose slot in confirm, cancel or on hold booking status.</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name = &apos;CT&apos;,$Profile.Name = &apos;NEW Training User&apos;,$Profile.Name = &apos;System Administrator UK Client Helpdesk&apos;,$Profile.Name = &apos;System Administrator&apos;)), 
OR(ISPICKVAL( Transition_Booking_Status__c,&quot;Confirmed&quot;), ISPICKVAL( Transition_Booking_Status__c,&quot;Cancelled&quot;),ISPICKVAL( Transition_Booking_Status__c,&quot;On Hold&quot;),ISPICKVAL( Transition_Booking_Status__c,&quot;Suggested&quot;)),
OR(ISNEW(),ISCHANGED(TC_Transition_Slot__c)))</errorConditionFormula>
        <errorDisplayField>TC_Transition_Slot__c</errorDisplayField>
        <errorMessage>Please select booking status to Provisional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Customer_Success_Owner_Value</fullName>
        <active>false</active>
        <description>When the Current Transition Owner is set to GCSC the user must fill in the Customer Success Owner field</description>
        <errorConditionFormula>AND(ISPICKVAL(Current_Transition_Owner__c ,&apos;GCSC&apos;), Customer_Success_Owner__c=null )</errorConditionFormula>
        <errorDisplayField>Customer_Success_Owner__c</errorDisplayField>
        <errorMessage>Please Select the COO Owner.</errorMessage>
    </validationRules>
</CustomObject>